<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="200dip"
            android:layout_height="83dip"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView" />

        <TextView
            android:text="@string/hot_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hot_food_name"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/hot_food_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hot_food_address"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/hot_food_name" />

        <TextView
            android:text="@string/hot_food_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hot_food_tel"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/hot_food_address" />

        <TextView
            android:text="@string/hot_food_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hot_food_email"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/hot_food_tel" />

    </RelativeLayout>

</RelativeLayout>