<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_synchronization"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ovh.snacking.snacking.view.SynchronizationActivity"
    tools:showIn="@layout/activity_synchronization"
    android:showDividers="middle"
    android:dividerPadding="20dip">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:text="@string/current_tablet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_text_size"
            android:id="@+id/current_tablet_label"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_tab_name"
            android:textStyle="bold"
            android:textSize="@dimen/big_text_size"
            android:layout_toEndOf="@id/current_tablet_label"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dip" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/last_sync_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/last_sync_text"
            android:textSize="@dimen/default_text_size"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/last_sync_date"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/last_sync_date"
            android:textSize="@dimen/default_text_size"
            android:layout_weight="1"
            android:gravity="center"/>

        <Button
            android:id="@+id/button_update"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/button_update"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dip" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/invoice_to_post"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/invoice_to_post"
            android:textSize="@dimen/default_text_size"
            android:layout_weight="3" />

        <Button
            android:id="@+id/button_post_invoice"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/button_post_invoice"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
