<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dip"
        android:id="@+id/document_content">

        <include layout="@layout/print_document_header"
            android:id="@+id/print_document_header"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/print_document_header">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/customer_name"
                android:gravity="end"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dip"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dip" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_marginStart="50dip"
                android:layout_marginEnd="50dip">

                <TextView
                    android:id="@+id/invoice_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/default_padding" />

                <TextView
                    android:id="@+id/invoice_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="@dimen/default_padding" />

                <TextView
                    android:id="@+id/invoice_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/invoice_number"/>

                <TextView
                    android:id="@+id/facture_source_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="@dimen/default_padding"
                    android:layout_below="@id/invoice_number"
                    android:visibility="invisible" />

            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dip" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/products"
                    android:layout_width="200dip"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/default_padding"
                    android:layout_gravity="bottom"/>
                <TextView
                    android:text="@string/price_u_ht"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingEnd="@dimen/default_padding" />
                <TextView
                    android:text="@string/qty_deliver"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingEnd="@dimen/default_padding" />
                <TextView
                    android:text="@string/total_line"
                    android:layout_width="120dip"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingEnd="@dimen/default_padding"
                    android:layout_gravity="bottom" />

            </LinearLayout>

            <ListView
                android:id="@+id/list_view_invoice_lines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dip" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:text="@string/tot_ht"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/tot_ht" />
                <TextView
                    android:layout_width="120dip"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:id="@+id/tot_ht" />

                <TextView
                    android:text="@string/tss"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/tss"
                    android:layout_below="@id/tot_ht"/>
                <TextView
                    android:layout_width="120dip"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:layout_below="@id/tot_ht"
                    android:id="@+id/tss" />

                <TextView
                    android:text="@string/tot_ttc"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/tot_ttc"
                    android:layout_below="@id/tss"/>
                <TextView
                    android:layout_width="120dip"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:layout_below="@id/tss"
                    android:id="@+id/tot_ttc" />

            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dip" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tot_words_label"
                    android:text="@string/tot_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tot_words"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tot_words_label"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="100dip">

                <TextView
                    android:id="@+id/text_view_rcs"
                    android:text="@string/rcs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:paddingBottom="20dip"/>

                <TextView
                    android:id="@+id/text_view_sgcb"
                    android:text="@string/sgbc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/button_print"
        android:text="@string/button_print"
        android:layout_width="200dip"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_change_last_invoice"
        android:visibility="invisible"
        android:text="@string/button_change_last_invoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>